--- a/assets/style.css
+++ b/assets/style.css
@@ -39,13 +39,43 @@ main{
     flex-wrap: wrap;
     margin: 0 -1rem;
 }
+
+.font-style{
+    font-family: "Montserrat", sans-serif;
+}
+
+.font-s2{
+    font-size: 0.8rem;
+}
+
+.btn{
+    border: 1px solid none;
+    background-color: #F7972E;
+    border-radius: 30px;
+    padding: 4px;
+    color: white;
+    text-decoration: none;
+}
 /* #endregion utilities */
 
 /* #region Spacing */
 
-.py-05{
-    padding-top: 1 rem;
-    padding-bottom: 1 rem;
+.py-2{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.py-1{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.pb-1{
+    padding-bottom: 0.5rem;
+}
+
+.pl-1{
+    padding-left: 0.5rem;
 }
 
 /* #endregion Spacing */
@@ -58,5 +88,9 @@ header{
         text-align: center;
         font-weight: 100;
     }
+}
+
+.fa-star{
+    color: #F7972E;
 }
 /* #endregion header */
