--- a/assets/style.css
+++ b/assets/style.css
@@ -30,8 +30,24 @@ main{
     width: 100%;
 }
 
+.col-10{
+    width: calc(100%/12*10);
+}
+
+.col-8{
+    width: calc(100%/12*8);
+}
+
 .col-6{
     width: 50%;
+}
+
+.col-4{
+    width: calc(100%/12*4);
+}
+
+.col-2{
+    width: calc(100%/12*2);
 }
 
 .row{
@@ -65,6 +81,10 @@ main{
     background-color: #F6F5F3;
 }
 
+.d-none{
+    display: none;
+}
+
 /* #endregion utilities */
 
 /* #region display flex */
@@ -74,6 +94,10 @@ main{
 
 .space-evenly{
     justify-content: space-evenly;
+}
+
+.justify-content-center{
+    justify-content: center;
 }
 /* #endregion display flex */
 
@@ -129,6 +153,8 @@ header{
 .card{
     background-color: white;
     border: 1px solid transparent;
+    box-shadow: 1px 1px 1px 1px #c0bfbe;
+    width: 100%;
 }
 
 .fa-facebook{
@@ -147,5 +173,19 @@ header{
     color: #E6222E;
 }
 
+.btn-social{
+    border: 1px solid white;
+    background-color: white;
+    padding: 10px;
+    border-radius: 30px;
+}
+
+.img{
+    max-width: 80%;
+}
+
+.border-top{
+    border-top: 1px solid #F7A64F;
+}
 
 /* #endregion main */
