--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ main{
 /* #region utilities */
 
 .container{
-    width: 80%;
+    width: 85%;
     margin: auto;
 }
 
@@ -72,7 +72,7 @@ main{
     border: 1px solid none;
     background-color: #F7972E;
     border-radius: 30px;
-    padding: 4px;
+    padding: 10px;
     color: white;
     text-decoration: none;
 }
@@ -81,8 +81,20 @@ main{
     background-color: #F6F5F3;
 }
 
+.bg-violet{
+    background-color: #7C69A4;
+}
+
 .d-none{
     display: none;
+}
+
+.text-a-center{
+    text-align: center;
+}
+
+.width-100{
+    width: 100%;
 }
 
 /* #endregion utilities */
@@ -92,16 +104,33 @@ main{
     display: flex;
 }
 
+.flex-wrap{
+    flex-wrap: wrap;
+}
+
 .space-evenly{
     justify-content: space-evenly;
+}
+
+.space-between{
+    justify-content: space-between;
 }
 
 .justify-content-center{
     justify-content: center;
 }
+
+.gap-1{
+    gap: 1.5rem;
+}
 /* #endregion display flex */
 
 /* #region Spacing */
+
+.py-3{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 
 .py-2{
     padding-top: 1rem;
@@ -123,6 +152,10 @@ main{
 
 .pl-1{
     padding-left: 0.5rem;
+}
+
+.line-h-1{
+    line-height: 2rem;
 }
 
 /* #endregion Spacing */
@@ -176,8 +209,8 @@ header{
 .btn-social{
     border: 1px solid white;
     background-color: white;
-    padding: 10px;
-    border-radius: 30px;
+    padding:10px 15px;
+    border-radius: 20px;
 }
 
 .img{
@@ -188,4 +221,21 @@ header{
     border-top: 1px solid #F7A64F;
 }
 
+.color-violet{
+    color: #4E3969;
+}
+
+.color-grey{
+    color: #787879;
+}
 /* #endregion main */
+
+/* #region footer */
+footer{
+    color: white;
+    a{
+        color: white;
+    }
+}
+
+/* #endregion footer */
