--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
 }
 
 main{
-    background-color: #d8d7d4;
+    background-color: #F6F5F3;
 }
 
 /* #endregion common */
@@ -254,12 +254,33 @@ footer{
     .d-block-sm{
         display: block;
     }
+
     header{
         height: 50px;
         h1{
             font-size: 30px;
             text-align: start;
             margin-left: 10px;
+        }
+    }
+    main{
+        ul{
+            padding-top: 2rem;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: start;
+            
+        }
+        li{
+            padding-right: 80px;
+            padding-bottom: 2rem;
+        }
+
+        .btn-social-sm{
+            border: 1px solid white;
+            background-color: white;
+            padding: 10px 50px;
+            border-radius: 20px;
         }
     }
 
