fix youtube's link

--- a/assets/style.css
+++ b/assets/style.css
@@ -421,6 +421,14 @@ footer{
             font-size: 20px;
         }
 
+        .font-size-md-30{
+            font-size: 20px;
+        }
+
+        .font-size-md-15{
+            font-size: 15px;
+        }
+
         .btn-social-md {
             border: 1px solid white;
             background-color: white;
